Fix overflowing content

--- a/_components/Navigation.css
+++ b/_components/Navigation.css
@@ -1,6 +1,6 @@
 .nav {
   height: 100%;
-  min-width: 280px;
+  min-width: 16rem;
   border-right: 1px solid hsl(var(--foreground-tertiary));
   font-size: 0.8rem;
   background-color: hsl(var(--background-primary));
